# nendo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: documentation.yml  test.yml
alembic/: env.py  script.py.mako
alembic/versions/: 4d18e8964428_initial_migration.py
docs/: platform.md  plugins.md
docs/development/: analysisplugindev.md  documentation.md  effectplugindev.md  embeddingplugindev.md  generateplugindev.md  index.md  libraryplugindev.md  plugindev.md
docs/platform/: config.md  development.md  server.md  server_api.md  usage.md  web.md
docs/platform/server/: api.md  api.yaml
docs/usage/: collections.md  concepts.md  config.md  faq.md  index.md  library.md  tracks.md  troubleshooting.md
scripts/: gen_platform_docs.py  gen_plugin.py  gen_plugin_docs.py  gen_ref_nav.py
src/nendo/: __init__.py  config.py  main.py  utils.py
src/nendo/schema/: __init__.py  core.py  exception.py  plugin.py
tests/: __init__.py  test_audio_file_utils.py  test_library.py  test_nendo_track.py  test_plugin.py  test_plugin_data.py
tests/plugins/: __init__.py  test_plugins_integration.py
